1. update config/splitter_example.conf file, fix the config problem

--- a/config/splitter_example.conf
+++ b/config/splitter_example.conf
@@ -27,11 +27,11 @@ database_worker_number = 1
 #一次请求区块链数据的最大块数,400000块之前可以设置大一些，比如300
 max_batch_block = 30
 #btc全节点的地址 
-endpoint = [btc 全节点的ip/域名]:[btc 全节点运行端口]
-#运行 btc 全节点设置的用户名, 没有就为空
-user =
-#运行 btc 全节点设置的密码, 没有就为空
-password =
+endpoint = http://[btc 全节点的ip/域名]:[btc 全节点运行端口]
+#运行 btc 全节点设置的用户名
+user = [rpc 访问账号]
+#运行 btc 全节点设置的密码
+password = [rpc 访问密码]
 #btc数据校验规则文件地址
 json_schema_file = /etc/bds-splitter/schema/btc.json↩
 #btc数据校验是否开启
